--- a/creation_sitee/500-chap1.md
+++ b/creation_sitee/500-chap1.md
@@ -1,7 +1,14 @@
-Une introduction méthodologique  
-Hélène Soulier
+---
+title: test
+template: default
+draft: false
+---
 
-1\_d’où sommes-nous partis ?
+
+## Une introduction méthodologique  
+## Hélène Soulier
+
+### d’où sommes-nous partis ?
 
 C’est au cours de master classes d’été où nous avons fait se rencontrer des étudiant et étudiantes paysagistes, architectes, designers et artistes entre 2013 et 2017 que les choses sont apparues. Initialement localisés en France, les premiers évènements pédagogiques *Holidays* et *Vini vindi vinci*[^1] regroupaient des étudiants paysagistes de l’École Nationale Supérieure d’Architecture et de Paysage de Bordeaux (ENSAPBx), des étudiants artistes du groupe Design mixte de l’École Nationale Supérieure d’Art de Bordeaux (EBABx), des étudiants designers du Politecnico di Milano et ont porté respectivement sur les problématiques aquitaines de fréquentation des littoraux océaniques et de territoires viticoles. A partir de 2015, nous avons invité le public des étudiant et étudiantes architectes de l’ENSAP Bordeaux à nous rejoindre et nous sommes dirigés à l’étranger. En 2015 à Istanbul, 2016 à Novi Sad et 2017 à Varsovie, sous le nom de STOP CITY[^2] la formation des étudiants et des enseignants que nous sommes (coordonnée par Hélène Soulier de l’ENSAPBx et Jean-Charles Zébo de l’EBABx) s’est intéressée à l’espace urbain. Le principe fut le même pour les trois éditions : se déplacer à l’étranger et convaincre une université possédant un département dédié à la création ou au projet, d’arpenter la ville pour en pressentir des sites ou des problématiques de projet et revenir quelques mois plus tard avec une quarantaine d’étudiants en intégrant les étudiants de l’université hôtesse. La master classe démarrait systématiquement sur une ou deux journées de partage de connaissances par des experts de toutes les disciplines confondues ayant un regard sur la ville concernée, encourager les étudiants que nous avions emmenés et ceux qui nous invitaient à constituer des équipes pluridisciplinaires, les laisser partir à la recherche de sites de projet, les accompagner dans leurs productions et produire une exposition finale dans une institution dédiée. Les jeunes artistes, paysagistes, architectes et designers ont alors interrogé les espaces de la ville qui présentaient des fragilités spatiales, sociales, fonctionnelles, politiques en élaborant des productions multiples, nettement ancrées dans une discipline ou au contraire hybrides. Au fil de ces cinq années de master classes, nous partagions alors le constat que le type de projet ou de production était davantage l’effet des problématiques émanant du territoire que le résultat de la composition disciplinaire de l’équipe d’étudiants, de telle sorte que les étudiants architectes ne produisaient pas nécessairement des objets architecturaux, ni les paysagistes des projets de paysage. Les productions de STOP CITY[^3] nous ont fait prendre conscience que le territoire et la nature des fonctionnements et dysfonctionnements qu’il recelait générait des propositions dont la forme n’était pas anticipée au préalable par les étudiants mais que proposer une production adéquate de projet nécessitait d’interroger précisément sa forme et la nature de la réponse. Selon que les problématiques des lieux étaient d’origines sociale, politique, spatiale, usagère, les types de projet pouvaient varier entre des installations, des aménagements, des services, des rénovations architecturales ou d’espace public, de nouvelles représentations ou en des combinaisons multiples et complémentaires de ces éléments, recombinées encore par la question de l’économie des projets. Les étudiants paysagistes, architectes, designers ou plasticiens partagent des outils, techniques et méthodes similaires sans que cela conduise à une proposition de projet unique et univoque. Face aux territoires, il existe une continuité des approches créatives et de la démarche de projet.
 
