--- a/creation_sitee/500_chap1.md
+++ b/creation_sitee/500_chap1.md
@@ -2,7 +2,7 @@
 title: partie-1
 template: chapitre
 class: chapter
-draft: true
+draft: false
 ---
 
 ## Qu’est-ce qu’un territoire de la création située ?
